# wayguide

./: README.md
arduino/src/: hapticGuidance.cpp  hapticGuidance.h  main.cpp  motorControl.cpp  motorControl.h  proximityIPC.cpp  proximityIPC.h
ipc/: CMakeLists.txt
ipc-node/: index.js  package-lock.json  package.json
ipc/src/: asio_compatibility.hpp  ipc_manager.cpp  ipc_manager.h  main.cpp  serial_handler.cpp  serial_handler.h  websocket_handler.cpp  websocket_handler.h
